[package]
name = "bin-utils"
version = "0.2.1"
edition = "2021"
description = "A bunch of utility macros and traits for binary parsers."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/bin-utils"

[features]
non_fixed = []
numeric_rw = ["non_fixed"]
default = ["non_fixed", "numeric_rw"]

[dependencies]
try_take = "0.1.0"
